[package]
name = "fastbloom"
version = "0.6.0"
edition = "2021"
authors = ["tomtomwombat"]
description = "The fastest Bloom filter in Rust. No accuracy compromises. Compatible with any hasher."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tomtomwombat/fastbloom/"
repository = "https://github.com/tomtomwombat/fastbloom/"
keywords = ["bloom", "filter", "data-structures", "bloom-filter", "bloomfilter"]
categories = ["data-structures", "caching", "algorithms"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed"}

[features]
default = ["rand"]
rand = ["dep:rand"]

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies]
getrandom = "0.2"
rand = { version = "0.8.5", optional = true }
siphasher = "1.0.0"
wide = "0.7.15"

[dev-dependencies]
rand = "0.8.5"
rand_regex = "0.16.0"
ahash = "0.8.6"
