[package]
name = "fastbloom"
version = "0.9.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["tomtomwombat"]
description = "The fastest Bloom filter in Rust. No accuracy compromises. Compatible with any hasher."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tomtomwombat/fastbloom/"
repository = "https://github.com/tomtomwombat/fastbloom/"
keywords = ["bloom", "filter", "data-structures", "bloom-filter", "bloomfilter"]
categories = ["data-structures", "caching", "algorithms"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["rand"]
rand = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
ahash = "0.8.12"
getrandom = "0.3"
rand = { version = "0.9.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
wide = "0.7.15"

[dev-dependencies]
rand = "0.9"
serde_json = "1.0"