[package]
name = "fastbloom"
version = "0.16.0"
edition = "2021"
rust-version = "1.70"
authors = ["tomtomwombat"]
description = "The fastest Bloom filter in Rust. No accuracy compromises. Full concurrency support and compatible with any hasher."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tomtomwombat/fastbloom/"
repository = "https://github.com/tomtomwombat/fastbloom/"
keywords = ["data-structures", "bloom-filter", "bloomfilter", "no_std"]
categories = ["data-structures", "caching", "algorithms"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "rand"]
std = ["portable-atomic/std"]
loom = ["dep:loom"]
rand = ["std", "dep:rand"]
serde = ["dep:serde", "siphasher/serde_std"]

[dependencies]
foldhash = { version = "0.2.0", default-features = false }
loom = { version = "0.7.2", optional = true }
rand = { version = "0.9.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
siphasher = { version = "1.0.0", default-features = false }
libm = "0.2"
portable-atomic = { version = "1.13.1", default-features = false, features = ["fallback"] }

[dev-dependencies]
fastrand = "2.3.0"
serde_cbor = "0.11.2"
